@@ -5,10 +5,10 @@ krill.index.commit.count = 134217000
 krill.index.commit.log = log/krill.commit.log
 krill.index.commit.auto = 500
 krill.index.relations.max = 100
-## Directory path of virtual corpora to cache
+# Directory path of virtual corpora to cache
 #krill.namedVC = vc
 
-## LDAP
+# LDAP
 ldap.config = file-path-to-ldap-config
 
 # Kustvakt
@@ -17,20 +17,20 @@ current.api.version = v1.0
 # multiple versions separated by space
 # supported.api.version = v1.0
 
-## server
+# server
 server.port=8089
 server.host=localhost
 
-## mail settings
+# mail settings
 mail.enabled = false
 mail.receiver = test@localhost
 mail.sender = noreply@ids-mannheim.de
 mail.address.retrieval = test
 
-## mail.templates
+# mail.templates
 template.group.invitation = notification.vm
 
-## default foundries for specific layers
+# default foundries for specific layers
 default.foundry.partOfSpeech = tt
 default.foundry.lemma = tt
 default.foundry.orthography = opennlp
@@ -39,32 +39,33 @@ default.foundry.constituent = corenlp
 default.foundry.morphology = marmot
 default.foundry.surface = base
 
-## delete configuration (default hard)
+# delete configuration (default hard)
 # delete.auto.group = hard
 delete.group = soft
 delete.group.member = soft
 
-## availability regex
-## only support |
+# availability regex (only support | )
 availability.regex.free = CC-BY.*
 availability.regex.public = ACA.*|QAO.NC
 availability.regex.all = QAO.*
 
-## options referring to the security module!
+# options referring to the security module!
 
-## OAuth 
-### (see de.ids_mannheim.korap.constant.AuthenticationMethod for possible 
-### oauth.password.authentication values)
+# OAuth 
+# (see de.ids_mannheim.korap.constant.AuthenticationMethod for possible 
+# oauth.password.authentication values)
 oauth.password.authentication = TEST
-### used to determine native client, currently not used
-oauth2.native.client.host = korap.ids-mannheim.de
+# used to determine native client, currently not used
+# oauth2.native.client.host = korap.ids-mannheim.de
 oauth2.max.attempts = 1
 # expiry in seconds (S), minutes (M), hours (H), days (D)
 oauth2.access.token.expiry = 1D
-oauth2.access.token.long.expiry = 365D
 oauth2.refresh.token.expiry = 90D
+# default 365D
+# oauth2.access.token.long.expiry = 365D
+# oauth2.refresh.token.long.expiry = 365D
 oauth2.authorization.code.expiry = 10M
-# -- scopes separated by space
+# scopes separated by space
 oauth2.default.scopes = search match_info 
 oauth2.client.credentials.scopes = client_info
 
