@@ -4,6 +4,10 @@
  - Updated query and user-group name pattern.
  2022-04-08
  - Added redirect_uri to client info API.
+2022-04-11
+ - Added registration_date, refresh_token_expiry, source and is_permitted
+   to the oauth2_client database table, and updated the OAuth2 client 
+   registration mechanism.
 
 # version 0.65.2
 
